--- a/ExtensionTrackerScan/src/app/angular/app.component.html
+++ b/ExtensionTrackerScan/src/app/angular/app.component.html
@@ -23,8 +23,8 @@
 
   <!-- Pagination -->
   <mat-paginator
-    [pageSize]="5"
-    [pageSizeOptions]="[5, 10, 20]"
+    [pageSize]="10"
+    [pageSizeOptions]="[10, 20, 50, 100]"
     showFirstLastButtons
   ></mat-paginator>
 </div>
