--- a/ExtensionTrackerScan/src/app/angular/app.component.css
+++ b/ExtensionTrackerScan/src/app/angular/app.component.css
@@ -64,3 +64,12 @@ table {
   height: 20px;
   cursor: pointer;
 }
+
+.fullpagebutton {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  position: relative;
+  top: 10px;
+  left: 730px;
+}
