Start webhook discord for scans who doesnt work

--- a/ExtensionTrackerScan/src/app/angular/app.component.html
+++ b/ExtensionTrackerScan/src/app/angular/app.component.html
@@ -1,9 +1,9 @@
-<img
+<!-- <img
   src="assets/icone.png"
   alt="openfullpage"
   class="fullpagebutton"
   (click)="openFullPage()"
-/>
+/> -->
 <div class="mat-elevation-z8">
   <mat-table [dataSource]="scans" matSort>
     <ng-container matColumnDef="isFavorite">
