--- a/ExtensionTrackerScan/src/app/angular/app.component.html
+++ b/ExtensionTrackerScan/src/app/angular/app.component.html
@@ -1,5 +1,5 @@
 <!-- <img
-  src="assets/icone.png"
+  src="public/icone.png"
   alt="openfullpage"
   class="fullpagebutton"
   (click)="openFullPage()"
@@ -18,7 +18,7 @@
       <mat-cell *matCellDef="let scan">
         <img
           [src]="
-            scan.isFavorite ? 'assets/fav_star.png' : 'assets/not_fav_star.png'
+            scan.isFavorite ? 'public/fav_star.png' : 'public/not_fav_star.png'
           "
           [alt]="scan.isFavorite ? 'Favorited' : 'Not Favorited'"
           class="favorite-icon"
