--- a/ExtensionTrackerScan/src/app/angular/app.component.html
+++ b/ExtensionTrackerScan/src/app/angular/app.component.html
@@ -24,6 +24,19 @@
 /> -->
 <div class="mat-elevation-z8">
   <mat-table [dataSource]="scans" matSort>
+    <ng-container matColumnDef="delete">
+      <mat-header-cell *matHeaderCellDef class="delete-column delete-header">
+      </mat-header-cell>
+      <mat-cell *matCellDef="let scan" class="delete-column">
+        <img
+          src="assets/delete.png"
+          alt="assets/delete.png"
+          class="favorite-icon"
+          (click)="delete(scan)"
+        />
+      </mat-cell>
+    </ng-container>
+
     <ng-container matColumnDef="isFavorite">
       <mat-header-cell
         *matHeaderCellDef
@@ -105,25 +118,6 @@
         </mat-form-field>
       </mat-cell>
     </ng-container>
-
-    <!-- <ng-container matColumnDef="delete">
-      <mat-header-cell
-        *matHeaderCellDef
-        mat-sort-header
-        start="desc"
-        class="favorite-column"
-      >
-        Fav
-      </mat-header-cell>
-      <mat-cell *matCellDef="let scan">
-        <img
-          src="public/delete.png"
-          alt="public/delete.png"
-          class="favorite-icon"
-          (click)="delete(scan)"
-        />
-      </mat-cell>
-    </ng-container> -->
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
