Fix websites and add new website + handling chapter number with '.', '-', ','

--- a/ExtensionTrackerScan/src/app/angular/app.component.html
+++ b/ExtensionTrackerScan/src/app/angular/app.component.html
@@ -1,1 +1,35 @@
+<div
+  style="
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #f8d7da;
+    color: #721c24;
+    padding: 15px;
+    border: 1px solid #f5c6cb;
+    border-radius: 5px;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    cursor: pointer;
+  "
+  (click)="openTab()"
+>
+  <span style="flex: 9">
+    <strong>📢 News:</strong> Webtoon Tracker is starting back to zero. Click
+    here to learn more!
+  </span>
+  <!-- <div
+    (click)="openAddPattern()"
+    style="
+      flex: 1;
+      text-align: center;
+      background-color: #f1b0b7;
+      padding: 10px;
+      border-radius: 5px;
+    "
+  >
+    Add website
+  </div> -->
+</div>
+
 <router-outlet></router-outlet>
