--- a/ExtensionTrackerScan/src/app/angular/scanTab/scan-tab.component.css
+++ b/ExtensionTrackerScan/src/app/angular/scanTab/scan-tab.component.css
@@ -78,3 +78,9 @@ table {
   height: 20px;
   cursor: pointer;
 }
+
+.mat-form-field {
+  width: 300px;
+  margin-left: 20px;
+  margin-top: 20px;
+}
