--- a/ExtensionTrackerScan/src/app/angular/app.component.css
+++ b/ExtensionTrackerScan/src/app/angular/app.component.css
@@ -1,1 +1,38 @@
+.news-banner-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.news-banner {
+  width: 580px;
+  background-color: #f8d7da;
+  color: #721c24;
+  padding: 15px;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+.news-banner span {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
+}
+
+.button {
+  text-align: center;
+  background-color: #007bff;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
