--- a/ExtensionTrackerScan/src/app/angular/app.component.css
+++ b/ExtensionTrackerScan/src/app/angular/app.component.css
@@ -22,17 +22,11 @@
   margin-right: 10px;
 }
 
-.button-container {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 10px;
-}
-
 .button {
   text-align: center;
   background-color: #007bff;
   color: white;
   padding: 10px;
   border-radius: 5px;
+  margin-right: 10px;
 }
