--- a/ExtensionTrackerScan/src/app/angular/addWebsitePattern/add_website_pattern.component.html
+++ b/ExtensionTrackerScan/src/app/angular/addWebsitePattern/add_website_pattern.component.html
@@ -15,5 +15,19 @@
     <div *ngIf="successMessage" class="success-message">
       The website has been proposed successfully
     </div>
+    <div class="available-websites">
+      <h2>Available websites for now</h2>
+      <mat-form-field class="mat-form-field">
+        <mat-label>Filter by website</mat-label>
+        <input matInput (keyup)="applyFilter($event)" />
+      </mat-form-field>
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <ng-container matColumnDef="website">
+          <td mat-cell *matCellDef="let element">{{ element }}</td>
+        </ng-container>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+      <mat-paginator [pageSize]="pageSize" showFirstLastButtons></mat-paginator>
+    </div>
   </div>
 </div>
