--- a/ExtensionTrackerScan/src/app/angular/addWebsitePattern/add_website_pattern.component.css
+++ b/ExtensionTrackerScan/src/app/angular/addWebsitePattern/add_website_pattern.component.css
@@ -126,8 +126,8 @@
 }
 
 .mat-form-field {
-  width: 500px;
-  margin-left: 20px;
+  width: 100%;
+  margin-left: 0;
   margin-top: 20px;
 }
 
@@ -139,4 +139,13 @@
   .mat-form-field-outline-thick.mat-focused
   .mat-form-field-outline {
   border-color: transparent;
+}
+
+.filter-info {
+  font-size: 14px;
+  color: #666;
+  margin-top: 5px;
+  text-align: left;
+  margin-left: 20px;
+  margin-right: 20px;
 }
