--- a/ExtensionTrackerScan/src/app/angular/addWebsitePattern/add_website_pattern.component.html
+++ b/ExtensionTrackerScan/src/app/angular/addWebsitePattern/add_website_pattern.component.html
@@ -21,13 +21,20 @@
         <mat-label>Filter by website</mat-label>
         <input matInput (keyup)="applyFilter($event)" />
       </mat-form-field>
+
       <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
         <ng-container matColumnDef="website">
           <td mat-cell *matCellDef="let element">{{ element }}</td>
         </ng-container>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+
       <mat-paginator [pageSize]="pageSize" showFirstLastButtons></mat-paginator>
     </div>
+    <p class="filter-info">
+      The website url is the one where you read a story and not the one where
+      you can see the list of different stories. Sometimes its different, some
+      websites use redirection for url.
+    </p>
   </div>
 </div>
